# ibb_mcp_server_air_quality

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ibb_mcp/: models.py  server.py
src/ibb_mcp/adapters/: base.py  ibb_air_quality.py
src/ibb_mcp/cache/: redis_cache.py
src/ibb_mcp/tool/: air_quality_tools.py
tests/: test_ibb_api.py  test_unit.py
