[project]
name = "ibb-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]

[project.scripts]
ibb-mcp = "ibb_mcp.server:main"
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/ibb_mcp"]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
